# messenger-e2ee-module

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: chacha20.ts.html  crypto-utils.ts.html  index.html
coverage/lcov-report/algorithms/: aes.ts.html  blowfish.ts.html  camellia.ts.html  chacha20.ts.html  ecdh.ts.html  ed25519.ts.html  index.html  kyber.ts.html
coverage/lcov-report/src/algorithms/: aes.ts.html  blowfish.ts.html  camellia.ts.html  chacha20.ts.html  ecdh.ts.html  ed25519.ts.html  index.html  kyber.ts.html
coverage/lcov-report/src/utils/: crypto-utils.ts.html  index.html
coverage/lcov-report/utils/: crypto-utils.ts.html  index.html
src/: crypto.ts  index.ts  main.ts  utils.ts
src/__tests__/: aes.test.ts  blowfish.test.ts  camelia.test.ts  chacha20.test.ts  crypto-utils.test.ts  ecdh.test.ts  ed25519.test.ts  kyber.test.ts
src/algorithms/: aes.ts  blowfish.ts  camellia.ts  chacha20.ts  ecdh.ts  ed25519.ts  kyber.ts
src/core/: crypto-module.ts
src/interfaces/: ICrypto.ts
src/types/: chacha20.d.ts  interfaces.ts
src/utils/: crypto-utils.ts
